FORMSTMPL-2: Add templates management & creation

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -1,3 +1,15 @@
 # Plugin's keys
 module.provider=City Of Paris
 module.description=Module Forms Template
+
+adminFeature.manageTemplates.name=Mod\u00e8les d'\u00e9tapes
+adminFeature.manageTemplates.description=Gestion des mod\u00e8les d'\u00e9tapes de formulaire
+
+create_template.pageTitle=Cr\u00e9ation d'un mod\u00ele
+manageTemplates.title=Gestion des mod\u00e8les d'\u00e9tapes
+manageTemplates.buttonAdd=Cr\u00e9er un mod\u00e8le
+manageTemplates.columnTitle=Titre
+manageTemplates.columnDescription=Description
+manageTemplates.columnActions=Actions
+
+info.template.created=Mod\u00ele cru00e9u00e9
