--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -12,4 +12,7 @@ manageTemplates.columnTitle=Titre
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
 
+warning.deleteTemplate=Voulez-vous vraiment supprimer ce mod\u00ele?
+
 info.template.created=Mod\u00ele cru00e9u00e9
+info.deleteTemplate.successful=Mod\u00ele supprim\u00e9=
