Fixes sonar issues

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -15,4 +15,4 @@ manageTemplates.columnActions=Actions
 warning.deleteTemplate=Voulez-vous vraiment supprimer ce mod\u00ele?
 
 info.template.created=Mod\u00ele cru00e9u00e9
-info.deleteTemplate.successful=Mod\u00ele supprim\u00e9=
+info.deleteTemplate.successful=Mod\u00ele supprim\u00e9
