FORMSTMPL-5: add copy template feature

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -11,6 +11,7 @@ manageTemplates.buttonAdd=Cr\u00e9er un mod\u00e8le
 manageTemplates.columnTitle=Titre
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
+manageTemplates.action.duplicateTemplate=Dupliquer le mod\u00e8le
 
 warning.deleteTemplate=Voulez-vous vraiment supprimer ce mod\u00ele?
 
