FORMSTMPL-5: cleanup messages

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -12,8 +12,13 @@ manageTemplates.columnTitle=Titre
 manageTemplates.columnDescription=Description
 manageTemplates.columnActions=Actions
 manageTemplates.action.duplicateTemplate=Dupliquer le mod\u00e8le
-
+manageTemplates.action.modify.name=Modifier
+manageTemplates.action.exportTemplate=Exporter le mod\u00e8le
+manageTemplates.action.deleteTemplate=Supprimer le mod\u00e8le
 warning.deleteTemplate=Voulez-vous vraiment supprimer ce mod\u00ele?
 
 info.template.created=Mod\u00ele cru00e9u00e9
 info.deleteTemplate.successful=Mod\u00ele supprim\u00e9
+error.template.not.imported=Erreur lors de l'import du mod\u00e8le
+error.template.not.copied=Erreur lors de la copie du mod\u00e8le
+error.template.not.exported=Erreur lors de l'export du mod\u00e8le
