FORMSTMPL-10 : RBAC Management

--- a/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/forms/modules/template/resources/template_messages_fr.properties
@@ -22,3 +22,15 @@ info.deleteTemplate.successful=Mod\u00ele supprim\u00e9
 error.template.not.imported=Erreur lors de l'import du mod\u00e8le
 error.template.not.copied=Erreur lors de la copie du mod\u00e8le
 error.template.not.exported=Erreur lors de l'export du mod\u00e8le
+
+# Permissions
+permission.label.resourceType=(Forms) Mod\u00e8le d'\u00e9tape
+permission.label.create=Cr\u00e9er un mod\u00e8le
+permission.label.modify=Modifier un mod\u00e8le
+permission.label.delete=Supprimer un mod\u00e8le
+
+# Actions
+action.modify.name=Modifier un mod\u00e8le
+action.delete.name=Supprimer un mod\u00e8le
+action.copy.name=Dupliquer un mod\u00e8le
+action.download.name=Exporter un mod\u00e8le
